--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "material-dashboard-2-react",
   "version": "2.2.0",
   "private": true,
+  "homepage": "https://ShazibKhattal99.github.io/sooCheek",
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
@@ -37,6 +38,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "eslintConfig": {
@@ -66,6 +69,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "^6.2.0",
     "prettier": "2.8.8"
   },
   "overrides": {
