--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "material-dashboard-2-react",
   "version": "2.2.0",
   "private": true,
-  "homepage": "https://ShazibKhattal99.github.io/sooCheek",
+  "homepage": ".",
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "dependencies": {
     "@emotion/cache": "11.10.8",
@@ -21,6 +17,10 @@
     "@mui/material": "5.12.3",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -42,12 +42,6 @@
     "deploy": "gh-pages -d build",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -61,16 +55,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4",
-    "eslint": "8.39.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "gh-pages": "^6.2.0",
-    "prettier": "2.8.8"
+    "ajv": "^7.2.4"
   },
   "overrides": {
     "svgo": "3.0.2"
