package.json:changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin",
   "version": "1.0.0",
-  "description": "",
+  "description": "soo cheek admin",
   "private": true,
   "homepage": ".",
   "main": "index.js",
