--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin",
   "version": "1.0.0",
-  "description": "soo cheek admin",
+  "description": "soo cheek admin.",
   "private": true,
   "homepage": ".",
   "main": "index.js",
@@ -18,7 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
-    "recharts": "^2.13.3",
+    "recharts": "^2.13.3","react-scripts": "^4.0.0", 
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
