--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "react-scripts build" 
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
-    "recharts": "^2.13.3","react-scripts": "^4.0.0", 
+    "recharts": "^2.13.3",
+    "react-scripts": "^4.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "^5.1.0",
+    "react-scripts": "^4.0.0"
   }
 }
