--- a/package.json
+++ b/package.json
@@ -22,18 +22,17 @@
     "react-scripts": "^4.0.0",
     "styled-components": "^6.1.13"
   },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "babel-loader": "^9.2.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "react-scripts": "^4.0.0"
-  }
+"devDependencies": {
+ "babel-loader": "^8.4.1", 
+  "@babel/core": "^7.26.0",
+  "@babel/preset-env": "^7.26.0",
+  "@babel/preset-react": "^7.25.9",
+  "clean-webpack-plugin": "^4.0.0",
+  "css-loader": "^7.1.2",
+  "html-webpack-plugin": "^5.6.3",
+  "style-loader": "^4.0.0",
+  "webpack": "^5.96.1",
+  "webpack-cli": "^5.1.4",
+  "webpack-dev-server": "^5.1.0"
+}
 }
