--- a/package.json
+++ b/package.json
@@ -14,25 +14,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.0",
-    "recharts": "^2.13.3",
     "react-scripts": "^4.0.0",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.13"
   },
-"devDependencies": {
- "babel-loader": "^8.4.1", 
-  "@babel/core": "^7.26.0",
-  "@babel/preset-env": "^7.26.0",
-  "@babel/preset-react": "^7.25.9",
-  "clean-webpack-plugin": "^4.0.0",
-  "css-loader": "^7.1.2",
-  "html-webpack-plugin": "^5.6.3",
-  "style-loader": "^4.0.0",
-  "webpack": "^5.96.1",
-  "webpack-cli": "^5.1.4",
-  "webpack-dev-server": "^5.1.0"
-}
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^8.4.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  }
 }
