--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "soo cheek admin",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://github.com/ShazibKhattal99/sooCheek",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "git subtree push --prefix build origin master"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "babel-loader": "^8.4.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
